--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.nurujjamanpollob.jsonparsing"
-        minSdkVersion 15
+        minSdkVersion 16
         //noinspection OldTargetApi
         targetSdkVersion 29
         versionCode 1
@@ -30,14 +30,17 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0-alpha02'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+	
+
+      implementation fileTree(dir: 'libs', include: ['*.jar'])
+      implementation 'androidx.appcompat:appcompat:1.2.0'
+      implementation 'com.google.android.material:material:1.3.0-alpha02'
+      implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+      implementation 'androidx.browser:browser:1.2.0'
 
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+      testImplementation 'junit:junit:4.12'
+      androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+      androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 }
