--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,16 @@
 
     <!-- Internet permission -->
     <uses-permission android:name="android.permission.INTERNET" />
+		<uses-permission 
+			android:name="android.permission.READ_EXTERNAL_STORAGE" />
+		<uses-permission
+			android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/njpollob_logo"
         android:label="@string/app_name"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/AppTheme"
-        tools:targetApi="n">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -33,13 +35,10 @@
         </activity>
 
 
-
-        <activity
-            android:name=".WebLoader"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:screenOrientation="sensor"
-            android:theme="@style/Theme.Design.NoActionBar"/>
-
+<activity
+	android:name=".StudentDetails"
+	android:label="Student Details" />
+       
     </application>
 
 </manifest>
